static/styles.css
@font-face {
    font-family: 'quicksand';
    src: url("quicksand.ttf");
}

:root {
    --background: rgb(10, 10, 10);
    --accent: rgb(20, 20, 20);
    --theme-color: rgb(85,135,105);
    --theme-color-alt: rgb(35,75,55);
    --theme-color-alt-dim: rgba(35,75,55, 75);
    --fade-length: 1000px;
    --bg-dot-size: 1px;
    --bg-dot-spacing: 32px;
}

html {
    padding: 0px;
    margin: 0px;
}

::-webkit-scrollbar {
    display: none;
}

body {
    padding: 0px;
    margin: 0px;
    background: var(--background);

    display: flex;
    flex-direction: column;

    align-items: center;
    justify-content: start;

    font-family: 'quicksand';
}

h1 {
    font-family: 'quicksand';

    padding: 0px;
    margin: 5px;
}

p {
    font-family: 'quicksand';
}

.intro_text {
    transform: translate(-175px, 25px);
}

.name {
    font-size: 55px;
}

.about {
    font-size: 15px;
    transform: translate(0px, -15px);
}

.header {
    width: 100%;

    display: flex;
    align-items: center;
    justify-content: center;

    flex-direction: column;

    color: white;
    font-family: sans-serif;

    height: calc(100vh + var(--fade-length));

    background-color: var(--background);

    --bgBlurPosX: 0px;
    --bgBlurPosY: 0px;
}


.header::before {
    content: '';
    width: 100%;
    height: calc(100vh + var(--fade-length));
    position: absolute;
    top: 0; left: 0;
    background: radial-gradient(circle 95vw, var(--theme-color), var(--background));
    background-repeat: no-repeat;
    background-size: 400vw 400vh;

    background-position: var(--bgBlurPosX) var(--bgBlurPosY);

    mask-image: radial-gradient(circle at center, #fff var(--bg-dot-size), transparent var(--bg-dot-size));

    mask-size: var(--bg-dot-spacing) var(--bg-dot-spacing);
}

.header::after {
    content: '';
    position: absolute;
    height: var(--fade-length);
    width: 100%;
    top: calc(100vh);
    left: 0px;
    right: 0px;
    bottom: 0px;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), var(--background));
    z-index: 2;
}

.chips {
    display: flex;
    flex-direction: row;
    margin-bottom: 10px;
}

.down {
    width: 50px;
    aspect-ratio: 1/1;

    position: absolute;
    left: calc(50% - 25px);
    top: calc(100vh - 100px);

    background: url("/down_arrow.png");
    background-size: cover;

    image-rendering:crisp-edges;

    transition-duration: 150ms;

    border-radius: 1rem;
}

.down:hover {
    transform: scale(1.1);
    cursor: pointer;
}

.links {
    display: flex;
    flex-direction: row;
}

.links a {
    transition-duration: 150ms;
    text-decoration: none;
    color: white;

    font-family: 'quicksand';

    margin: 5px;

    background: rgba(155, 155, 155, 0.1);
    padding-left: 5px;
    padding-right: 5px;

    padding-top: 2px;
    padding-bottom: 2px;

    border-radius: 3px;

    transition-duration: 300ms;
}

.links a.sfm::after {
    background: #1DB954;
}

.links a.sfm:hover {
    color: #1DB954;
}

.links a.gh::after {
    background: #c297ff;
}

.links a.gh:hover {
    color: #c297ff;
}

.links a::after {
    content: "";
    display: block;
    width: 0%;
    background: white;
    height: 1px;
    transition-duration: 150ms;
    border-radius: 1rem;
}

.links a:hover::after {
    width: 100%;
}

.links a:hover {
    background: none;
}

.header-content {
    position:absolute;
    top: 0px;
    left: 0px;
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.card {
    position: relative;
    width: 75%;
    height: 300px;
    background: var(--accent);

    border-radius: 12px;
    border: none;

    margin: 50px;

    overflow: hidden;

    display: flex;

    z-index: 1;

    box-shadow: 0px 0px 5px 0px var(--theme-color-alt);

    --card-rotation-x: 0;
    --card-rotation-y: 0;

    --shadow-offset-x: 0;
    --shadow-offset-y: 0;

    transition: 125ms linear;
}

.card:hover {
    transform: scale(1.05) rotateX(var(--card-rotation-y)) rotateY(var(--card-rotation-x));
    box-shadow: var(--shadow-offset-x) calc(0px + var(--shadow-offset-y)) 30px 0px var(--theme-color-alt-dim);
}

@media (hover: none) {
    .card:hover {
        transform: scale(1) rotateX(0deg) rotateY(0deg);
        box-shadow: none;
    }
}

.card img{
    float: right;

    width: 300px;
    height: 300px;

    object-fit: cover;

    position:static;
}

.card .content {
    padding: 10px;
    width: calc(100% - 300px);

    color: white;

    display: flex;
    flex-direction: column;
}

.card .content .row {
    display: flex;
    flex-direction: row;

    align-items: center;
}

.card .content p {
    margin-left: 15px;
    margin-right: 30px;
}

.card .content h1 {
    margin-top: 15px;
}

.card .content .links {
    background-color: rgba(0,0,0,0.5);
    align-items: center;
    border-radius: 8px;
}

.card .content .links a {
    background: none;
}

.chip {
    display: flex;
    height: 20px;
    border-radius: 1rem;
    background-color: red;
    margin: 0px;
    margin-right: 5px;
    padding-left: 10px;
    padding-right: 10px;
}

.body-content {
    position:absolute;
    top: 100vh;
    left: 0px;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 1000;
    perspective: 5500px;
    overflow-x: hidden;
}

.footer {
    position: relative;

    width: 100vw;
    padding: 0px;
    margin: 0px;
    margin-top: 150px;

    background: var(--accent);

    color: #dfdfdf;

    display: flex;
    flex-direction: column;

    font-size: 10px;

    align-items: center;
    justify-content: center;

    height: 150px;

    box-shadow: 0px -20px 40px var(--theme-color);

    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.footer a {
    text-decoration: none;
    color: #dfdfdf;
    margin-top: 10px;
}

.footer a::after {
    content: "";
    display: block;
    width: 0%;
    background: white;
    height: 1px;
    transition-duration: 150ms;
    border-radius: 1rem;
}

.footer a:hover::after {
    width: 100%;
}

